@@ -1117,24 +1117,54 @@ verilog/inc1.v:626: DS<(.mySig (myInterface.pa5),>
 verilog/inc1.v:627: 
 verilog/inc1.v:628: COMMENT: //======================================================================
 verilog/inc1.v:628:  /*CMT*/  
-verilog/inc1.v:629: COMMENT: // IEEE mandated predefines
+verilog/inc1.v:629: COMMENT: // Stringify bug
 verilog/inc1.v:629:  /*CMT*/  
-verilog/inc1.v:630: COMMENT: // undefineall should have no effect on these
-verilog/inc1.v:630:    /*CMT*/  
-verilog/inc1.v:631: predef DS<0> 0
-verilog/inc1.v:632: predef DS<1> 1
-verilog/inc1.v:633: predef DS<2> 2
-verilog/inc1.v:634: predef DS<3> 3
-verilog/inc1.v:635: predef DS<10> 10
-verilog/inc1.v:636: predef DS<11> 11
-verilog/inc1.v:637: predef DS<20> 20
-verilog/inc1.v:638: predef DS<21> 21
-verilog/inc1.v:639: predef DS<22> 22
-verilog/inc1.v:640: predef DS<23> 23
-verilog/inc1.v:641: predef DS<-2> -2
-verilog/inc1.v:642: predef DS<-1> -1
-verilog/inc1.v:643: predef DS<0> 0
-verilog/inc1.v:644: predef DS<1> 1
-verilog/inc1.v:645: predef DS<2> 2
-verilog/inc1.v:646: 
-verilog/inc1.v:647: `line 647 "verilog/inc1.v" 2
+verilog/inc1.v:630: 
+verilog/inc1.v:631:  
+verilog/inc1.v:632: DS<`dbg_hdl(UVM_LOW, ("Functional coverage enabled: paramgrp"));>
+verilog/inc1.v:633: 
+verilog/inc1.v:634:  
+verilog/inc1.v:635:  
+verilog/inc1.v:635: 
+verilog/inc1.v:637:  
+verilog/inc1.v:637: 
+verilog/inc1.v:637: 
+verilog/inc1.v:637: 
+verilog/inc1.v:641: 
+verilog/inc1.v:642: module pcc2_cfg;
+verilog/inc1.v:643:   generate
+verilog/inc1.v:644:    DS<
+verilog/inc1.v:644: `line 644 "verilog/inc1.v" 0
+verilog/inc1.v:644:   covergroup a @(posedge b); 
+verilog/inc1.v:644: `line 644 "verilog/inc1.v" 0
+verilog/inc1.v:644:     c: coverpoint d iff ((c) === 1'b1); endgroup 
+verilog/inc1.v:644: `line 644 "verilog/inc1.v" 0
+verilog/inc1.v:644:       a u_a; DS<
+verilog/inc1.v:644: `line 644 "verilog/inc1.v" 0
+verilog/inc1.v:644:    initial do begin DS<$display ("DEBUG : %s [%m]", $sformatf ("Functional coverage enabled: u_a"))>; end while(0)>>;
+verilog/inc1.v:645:   endgenerate
+verilog/inc1.v:646: endmodule
+verilog/inc1.v:647: 
+verilog/inc1.v:648: COMMENT: //======================================================================
+verilog/inc1.v:648:  /*CMT*/  
+verilog/inc1.v:649: COMMENT: // IEEE mandated predefines
+verilog/inc1.v:649:  /*CMT*/  
+verilog/inc1.v:650: COMMENT: // undefineall should have no effect on these
+verilog/inc1.v:650:    /*CMT*/  
+verilog/inc1.v:651: predef DS<0> 0
+verilog/inc1.v:652: predef DS<1> 1
+verilog/inc1.v:653: predef DS<2> 2
+verilog/inc1.v:654: predef DS<3> 3
+verilog/inc1.v:655: predef DS<10> 10
+verilog/inc1.v:656: predef DS<11> 11
+verilog/inc1.v:657: predef DS<20> 20
+verilog/inc1.v:658: predef DS<21> 21
+verilog/inc1.v:659: predef DS<22> 22
+verilog/inc1.v:660: predef DS<23> 23
+verilog/inc1.v:661: predef DS<-2> -2
+verilog/inc1.v:662: predef DS<-1> -1
+verilog/inc1.v:663: predef DS<0> 0
+verilog/inc1.v:664: predef DS<1> 1
+verilog/inc1.v:665: predef DS<2> 2
+verilog/inc1.v:666: 
+verilog/inc1.v:667: `line 667 "verilog/inc1.v" 2
